--- a/src/main/resources/templates/customer-details.html
+++ b/src/main/resources/templates/customer-details.html
@@ -7,11 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" th:href="@{/css/style.css}">
+	<style>
+	    .page-container {
+	        padding-top: 70px; /* Adjust  header*/
+	        padding-bottom: 60px; /* Adjust footer */
+	    }
+
+	    .footer {
+	        z-index: 1000;
+	    }
+		</style>
 </head>
 <body>
     <div th:replace="fragments/header :: header"></div>
     
-    <div class="container-fluid">
+    <div class="container-fluid page-container"> // changed name 20250412
         <div class="row">
             <div class="col-md-2">
                 <div th:replace="fragments/sidebar :: sidebar"></div>
