--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-    <footer th:fragment="footer" class="footer mt-auto py-3 bg-dark text-white">
-        <div class="container text-center">
-            <span>Hotel Management System &copy; 2025 | 24-25B AST21403 SOFTWARE DEVELOPMENT PROJECT</span>
-        </div>
-        
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script th:src="@{/js/main.js}"></script>
-    </footer>
+	<footer th:fragment="footer" class="footer fixed-bottom py-3 bg-dark text-white">
+	    <div class="container text-center">
+	        <span>Hotel Management System &copy; 2025 | 24-25B AST21403 SOFTWARE DEVELOPMENT PROJECT</span>
+	    </div>
+	</footer>
 </body>
 </html>
