--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,31 +9,31 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
-    <header th:fragment="header">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/dashboard">Hotel Management System</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item" th:if="${session.staff != null}">
-                            <span class="nav-link">
-                                <i class="bi bi-person-circle"></i> 
-                                <span th:text="${session.staff.name}"></span>
-                                (<span th:text="${session.staff.role}"></span>)
-                            </span>
-                        </li>
-                        <li class="nav-item" th:if="${session.staff != null}">
-                            <a class="nav-link" href="/logout">
-                                <i class="bi bi-box-arrow-right"></i> Logout
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+	<header th:fragment="header" class="fixed-top">
+	    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	        <div class="container-fluid">
+	            <a class="navbar-brand" href="/dashboard">Hotel Management System</a>
+	            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+	                <span class="navbar-toggler-icon"></span>
+	            </button>
+	            <div class="collapse navbar-collapse" id="navbarNav">
+	                <ul class="navbar-nav ms-auto">
+	                    <li class="nav-item" th:if="${session.staff != null}">
+	                        <span class="nav-link">
+	                            <i class="bi bi-person-circle"></i> 
+	                            <span th:text="${session.staff.name}"></span>
+	                            (<span th:text="${session.staff.role}"></span>)
+	                        </span>
+	                    </li>
+	                    <li class="nav-item" th:if="${session.staff != null}">
+	                        <a class="nav-link" href="/logout">
+	                            <i class="bi bi-box-arrow-right"></i> Logout
+	                        </a>
+	                    </li>
+	                </ul>
+	            </div>
+	        </div>
+	    </nav>
+	</header>
 </body>
 </html>
